Fix spacing between rows in mobile BorderBoxTable

--- a/app/components/op_primer/border_box_table_component.sass
+++ b/app/components/op_primer/border_box_table_component.sass
@@ -26,7 +26,6 @@
   .op-border-box-grid
     grid-template-columns: 1fr auto
     grid-auto-flow: row
-    row-gap: 0.25rem
 
     &--heading,
     &--no-mobile
@@ -34,6 +33,8 @@
 
     &--row-item
       grid-column: 1
+      // Match the height of the action button on the right. Otherwise the spacing between the lines will be diverging
+      line-height: var(--control-medium-size)
 
     &--row-action
       grid-column: 2
